# between-exchanges-arbitrage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh  stop_app.sh
app/connectors/: bybit.py  docs.md  models.py  okx_connector.py  run_all.py
app_ver2/: README.md  config.py  instrument_fetcher.py  main.py  rate_limited_logger.py  utils.py
app_ver2/connectors/: __init__.py  binance.py  bitget.py  bybit.py  deribit.py  models.py  okx.py
app_ver2/connectors/base/: __init__.py  config.py  connector.py  state.py
app_ver2/dashboard/: README.md  __init__.py  app.py
app_ver2/position_manager/: __init__.py  calculations.py  database.py  manager.py  models.py  monitor.py
tests/: test_calculations.py  test_critical_fixes.py  test_position_closing.py
